[project]
name = "detour-tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "optuna>=4.8.0",
    "polars>=1.39.3",
    "scipy>=1.17.1",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
